WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129833
Missing include in JSConsole.cpp
https://bugs.webkit.org/show_bug.cgi?id=129833
Summary
Missing include in JSConsole.cpp
Julien Brianceau
Reported
2014-03-06 15:03:52 PST
See buildbot:
http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release/builds/45406/steps/compile-webkit/logs/stdio
CXXLD Programs/jsc-3 ./.libs/libjavascriptcoregtk-3.0.so: undefined reference to `JSC::JSValue::isGetterSetter() const' ./.libs/libjavascriptcoregtk-3.0.so: undefined reference to `JSC::JSCell::structure(JSC::VM&) const' ./.libs/libjavascriptcoregtk-3.0.so: undefined reference to `JSC::JSValue::encode(JSC::JSValue)' ./.libs/libjavascriptcoregtk-3.0.so: undefined reference to `JSC::JSValue::decode(long)' collect2: error: ld returned 1 exit status make[1]: *** [Programs/jsc-3] Error 1
Attachments
Add missing include in JSConsole.cpp
(908 bytes, patch)
2014-03-06 15:07 PST
,
Julien Brianceau
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2014-03-06 15:07:06 PST
Created
attachment 226046
[details]
Add missing include in JSConsole.cpp
WebKit Commit Bot
Comment 2
2014-03-06 15:10:17 PST
Attachment 226046
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/JSConsole.cpp:27: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Julien Brianceau
Comment 3
2014-03-06 15:15:10 PST
Landed:
http://trac.webkit.org/changeset/165221
Julien Brianceau
Comment 4
2014-03-06 15:26:48 PST
... with style fixed:
http://trac.webkit.org/changeset/165223
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug