Build fix: add missing include in JSConole.cpp. https://bugs.webkit.org/show_bug.cgi?id=129833

Reviewed by Oliver Hunt.

* runtime/JSConsole.cpp:



Canonical link: https://commits.webkit.org/147859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165221 268f45cc-cd09-0410-ab3c-d52691b4dbfc